Add Email repository

--- a/EmailHandlerApi/EmailHandlerApi.csproj
+++ b/EmailHandlerApi/EmailHandlerApi.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmailHandlerCommon\EmailHandlerCommon.csproj" />
+    <ProjectReference Include="..\EmailHandlerRepository\EmailHandlerRepository.csproj" />
   </ItemGroup>
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
