--- a/EmailHandlerRepository/EmailHandlerRepository.csproj
+++ b/EmailHandlerRepository/EmailHandlerRepository.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EmailHandlerCommon\EmailHandlerCommon.csproj" />
+  </ItemGroup>
+
 </Project>
