--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,9 +1,10 @@
 {
   "Logging": {
+    "Filename": "emailHandler.log",
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*"
