Add smtp service and comments

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -7,6 +7,12 @@
     }
   },
   "Settings": {
-    "DbLocation": "Filename=./emailHandler.db"
+    "DbLocation": "Filename=./emailHandler.db",
+    "Smtp": {
+      "Host": "smtp.pepipost.com",
+      "Port": 25,
+      "Username": "azieh",
+      "Password": "azieh_263655c6f8da94729eeac77bd02f5ce6"
+    }
   }
 }
